--- a/.github/workflows/windsurf_update.yml
+++ b/.github/workflows/windsurf_update.yml
@@ -3,7 +3,7 @@ name: Update Windsurf AUR Package
 on:
   push:
     paths:
-      - 'packages/windsurf/PKGBUILD'
+      - "packages/windsurf/PKGBUILD"
     branches:
       - main
   workflow_dispatch:
@@ -24,7 +24,7 @@ jobs:
       - name: Publish AUR package
         uses: KSXGitHub/github-actions-deploy-aur@v3.0.1
         with:
-          pkgname: windsurf
+          pkgname: windsurf-latest
           pkgbuild: packages/windsurf/PKGBUILD
           commit_username: ${{ secrets.AUR_USERNAME }}
           commit_email: ${{ secrets.AUR_EMAIL }}
